# simple-rocket-server-example

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
api/: Cargo.toml  docker-compose.yml
api/src/: catchers.rs  db.rs  lib.rs  main.rs
api/src/auth/: err.rs  login_auth.rs  mod.rs  token_auth.rs
api/src/db/: database.rs  err.rs  mod.rs
api/src/endpoints/: login.rs  mod.rs  signup.rs  user.rs
api/tests/: login_tests.rs  signup_tests.rs
api/tests/common/: mod.rs
common/: Cargo.toml
common/src/: datetime.rs  lib.rs  security.rs  user.rs
src/: db.rs  main.rs
