[package]
name = "rocket_example"
version = "0.1.0"
authors = ["scipi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
rocket = "0.4.6"
rocket_contrib = "0.4.6"
rocket_contrib_codegen = "0.4.6"
serde_json = "1.0"
log = "0.4.11"

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["sync"]

