[package]
name = "api"
version = "0.1.0"
authors = ["scipi"]
edition = "2018"

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "api_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
rocket = "0.4.6"
rocket_contrib = "0.4.6"
rocket_contrib_codegen = "0.4.6"
serde = "1.0"
serde_json = "1.0.60"
log = "0.4.11"
chrono = "0.4.0"

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["sync"]

